update remove chapter function